--- a/img/index.html
+++ b/img/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>考核作品</title>
+    <title>考核作品1</title>
     <link rel="stylesheet" href="../css/idex.css">
 </head>
 <body>
