新增定位导航栏和角色介绍界面

--- a/img/index.html
+++ b/img/index.html
@@ -29,7 +29,7 @@
                     <a href="../img/register.html" target="_blank">登录</a>
                 </li>
                  <li>
-                    <a href="#" target="_blank">角色介绍</a>
+                    <a href="../img/introduce.html" target="_blank">角色介绍</a>
                 </li>
                 <li>
                     <a href="#" target="_blank">动漫简介</a>
