--- a/img/introduce.html
+++ b/img/introduce.html
@@ -8,14 +8,11 @@
 </head>
 <body>
     <div class="header">
-            <img src="../img/photo/原神logo37893（镂空）.png" alt="" id="logo">
+            <img src="../img/photo/吞噬星空888888.png" alt="" id="logo">
         <div class="daohang">
             <ul>
                 <li>
-                    <a href="#" target="_blank">首页</a>
-                </li>
-                <li>
-                    <a href="../img/register.html" target="_blank">登录</a>
+                    <a href="../img/index.html" target="_blank">首页</a>
                 </li>
                 <li>
                     <a href="#" target="_blank">动漫简介</a>
@@ -30,7 +27,7 @@
                     <a href="#" target="_blank">作品设定</a>
                 </li>
                 <li>
-                    <a href="#" target="_blank">角色介绍</a>
+                    <a href="../img/introduce.html" target="_blank">角色介绍</a>
                 </li>
                <li>
                     <a href="#" target="_blank">超然剪辑</a>
@@ -44,8 +41,39 @@
                 <li>
                     <a href="#" target="_blank">科幻空间</a>
                 </li>
+                <li>
+                    <a href="../img/register.html" target="_blank" style="margin-left: 220px;">登录</a>
+                    <img src="../img/photo/登录.png" alt="">
+                </li>
             </ul>
         </div>
     </div>
+    <div class="center">
+    <div class="place">
+        <ul>
+            <li><a href="#">主角三人团</a></li>
+            <li><a href="#">极限武馆</a></li>
+            <li><a href="#">雷电武馆</a></li>
+            <li><a href="#">旧世界荒野区</a></li>
+            <li><a href="#">敬请期待</a></li>
+        </ul>
+    </div>
+    <div class="introduce">
+        <hr>
+        <h1>罗峰</h1>
+        <div class="voic"> 
+            <img  id="tnt1"  src="../img/photo/元素3.webp" alt="">
+            <div class="mai">
+                <img id="tnt2"  src="../img/photo/麦克风.png" alt="">
+            </div>
+            
+            <span>cv:赵乾景</span>
+        </div>
+        <div class="miaoshu">
+           <img src="../img/photo/罗峰机甲（镂空）.png" alt="">
+        </div>
+    </div>
+    </div>
+    <div class="bottom"></div>
 </body>
 </html>
