--- a/img/register.html
+++ b/img/register.html
@@ -9,6 +9,51 @@
     <link rel="stylesheet" href="../css/register.css">
 </head>
 <body>
+    <div class="header">
+        <img src="../img/photo/吞噬星空888888.png" alt="" id="logo">
+    <div class="daohang">
+        <ul>
+            <li>
+                <a href="../img/index.html" target="_blank">首页</a>
+            </li>
+            <li>
+                <a href="#" target="_blank">动漫简介</a>
+            </li>
+            <li>
+                <a href="#" target="_blank">动漫制作</a>
+            </li>
+            <li>
+                <a href="#" target="_blank">玄机科技</a>
+            </li>
+            <li>
+                <a href="#" target="_blank">作品设定</a>
+            </li>
+            <li>
+                <a href="../img/introduce.html" target="_blank">角色介绍</a>
+            </li>
+           <li>
+                <a href="#" target="_blank">超然剪辑</a>
+            </li>
+            <li>
+                <a href="#" target="_blank">相关漫画</a>
+            </li>
+            <li>
+                <a href="#" target="_blank">讨论</a>
+            </li>
+            <li>
+                <a href="#" target="_blank">科幻空间</a>
+            </li>
+            <li>
+                <a href="../img/register.html" target="_blank" style="margin-left: 220px;">登录</a>
+                <img src="../img/photo/登录.png" alt="">
+            </li>
+        </ul>
+    </div>
+</div>
+
+
+
+
     <img src="../img/photo/米哈游1.png" alt="" id="player11">
     <img src="../img/photo/米哈游3（镂图）.png" alt="" id="player22">
     <div class="login">
