增加玄机介绍页面和世界页面

--- a/img/index.html
+++ b/img/index.html
@@ -32,13 +32,13 @@
                     <a href="../img/introduce.html" target="_blank">角色介绍</a>
                 </li>
                 <li>
-                    <a href="#" target="_blank">动漫简介</a>
+                    <a href="../img/jianjie.html" target="_blank">动漫简介</a>
                 </li>
                 <li>
                     <a href="#" target="_blank">动漫制作</a>
                 </li>
                 <li>
-                    <a href="#" target="_blank">玄机科技</a>
+                    <a href="../img/xuanji.html" target="_blank">玄机科技</a>
                 </li>
                 <li>
                     <a href="#" target="_blank">作品设定</a>
@@ -54,7 +54,7 @@
                     <a href="#" target="_blank">讨论</a>
                 </li>
                 <li>
-                    <a href="#" target="_blank">科幻空间</a>
+                    <a href="../img/world.html" target="_blank">世界</a>
                 </li>
             </ul>
         </div>
@@ -315,14 +315,16 @@
                 </li>
                 <li>
                     <a href="#">
-                        <p>第九集</p>
+                        
                   <img src="../img/photo/第九集webp.webp" alt="">
+                  <p>第九集</p>
                     </a>
                 </li>
                 <li style="margin-right: 0px;">
                 <a href="#">
-                <p>第十集</p>    
+                 
                 <img src="../img/photo/第十集.webp" alt="">
+                 <p>第十集</p>  
                 </a>
                 </li>
             </ul>
